# Cookest

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DB_SCHEMA.md  README.md  README.pt-PT.md  docker-compose.yml  pubspec.yaml
.github/: copilot-instructions.md
crates/app-api/src/: config.rs  db.rs  main.rs
crates/app-api/src/entity/: mod.rs
crates/app-api/src/handlers/: mod.rs
crates/app-api/src/middleware/: mod.rs
crates/app-api/src/models/: mod.rs  recipe.rs
crates/app-api/src/services/: email.rs  meal_plan.rs  mod.rs  recipe_gen.rs
docs/: BUILD_AND_USAGE.md
docs/database/: SCHEMA.md  SCHEMA.pt-PT.md
docs/pt-PT/: BUILD_AND_USAGE.md
lib/: main.dart
lib/src/core/: config.dart
macos/Runner.xcodeproj/: project.pbxproj
src/: config.rs  db.rs  errors.rs  main.rs
src/entity/: chat_message.rs  chat_session.rs  cooking_history.rs  ingredient.rs  ingredient_nutrient.rs  inventory_item.rs  meal_plan.rs  meal_plan_slot.rs  mod.rs  portion_size.rs  recipe.rs  recipe_image.rs  recipe_ingredient.rs  recipe_nutrition.rs  recipe_rating.rs  recipe_step.rs  user.rs  user_favorite.rs  user_preference.rs
src/handlers/: auth.rs  chat.rs  ingredient.rs  mod.rs  recipe.rs  user.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: ingredient.rs  interaction.rs  inventory.rs  meal_plan.rs  mod.rs  profile.rs  recipe.rs  user.rs
src/services/: auth.rs  chat.rs  ingredient.rs  interaction.rs  inventory.rs  meal_plan.rs  mod.rs  preference.rs  profile.rs  recipe.rs  token.rs
src/validation/: auth.rs
test/: widget_test.dart
(+19 files in other folders)
